# SDAIAI-T5-BOOTCAMP-WEAK1-Project

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  run.py
data/: sample.csv
src/csv_profiler/: __init__.py  cli.py  io.py  profiling.py  render.py
